--- a/gitfile.html
+++ b/gitfile.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello World!</title>
+<title>Melon Impressions</title>
 <link rel="stylesheet" href="bluestyle.css">
 </head>
 <body>
 
-<h1>Hello world!</h1>
-<div><img src="Melon Impressions Logo 3D.png" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
-<div><img src="Melon Impresions Logo.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
+<h1>Melon Impressions Logos</h1>
+<div><img src="Melon Impressions Logo 3D.png" alt="Hello World from Space" style="width:100%;max-width:450px"></div>
+<h3>This is the Melon Impressions 3D logo.</h3>
+
+<div><img src="Melon Impresions Logo.png" alt="Hello Git" style="width:100%;max-width:450px"></div>
+<h3>This is the Melon Impressions main logo.</h3>
 
 </body>
 </html>
