--- a/gitfile.html
+++ b/gitfile.html
@@ -8,9 +8,10 @@
 
 <h1>Hello world!</h1>
 <div><img src="Melon Impressions Logo 3D.png" alt="Hello World from Space" style="width:100%;max-width:640px"></div>
-<p>This is the first file in my new Git Repo.</p>
-<p>This line is here to show how merging works.</p>
+<p>This is the Melon Impressions 3D logo.</p>
+<hr><br>
 <div><img src="Melon Impresions Logo.png" alt="Hello Git" style="width:100%;max-width:640px"></div>
-
+<p>This is the Melon Impressions main logo.</p>
+<hr>
 </body>
 </html>
